# hpc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: bench.yml  ci.yml
configs/: agent.toml  daemon.toml  monitor.toml
hpc-agent/: Cargo.toml  README.md
hpc-agent/src/: client.rs  executor.rs  main.rs  metrics.rs  proto.rs
hpc-bench/: Cargo.toml  README.md
hpc-bench/benches/: ffi_bench.rs  io_bench.rs
hpc-bench/src/: ffi_raw.rs  lib.rs
hpc-cli/: Cargo.toml  README.md
hpc-cli/src/: client.rs  main.rs  output.rs
hpc-cli/src/commands/: bench.rs  fs.rs  mod.rs  node.rs
hpc-core/: Cargo.toml  README.md
hpc-core/src/: config.rs  error.rs  lib.rs  telemetry.rs  types.rs
hpc-daemon/: Cargo.toml  README.md  build.rs
hpc-daemon/src/: api.rs  grpc.rs  main.rs  state.rs  store.rs
hpc-diag/: Cargo.toml
hpc-diag/src/: lib.rs  main.rs  proc.rs  report.rs
hpc-ffi/: Cargo.toml  build.rs
hpc-ffi/src/: hpc_io.c  hpc_io.h  lib.rs
hpc-monitor/: Cargo.toml  README.md
hpc-monitor/src/: health.rs  main.rs  metrics.rs
proto/: hpc.proto
scripts/: bench-run.sh  ci-local.sh  deploy-agent.sh  log-collect.sh  setup.sh
