[workspace]
resolver = "2"
members = [
    "hpc-core",
    "hpc-daemon",
    "hpc-agent",
    "hpc-cli",
    "hpc-monitor",
    "hpc-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Hijanhv"]
repository = "https://github.com/Hijanhv/hpc"
description = "HPC filesystem management framework"

# Centralised dependency versions so every crate stays in lock-step.
[workspace.dependencies]
# Local crates
hpc-core = { path = "hpc-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC / protobuf
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

# HTTP (REST + metrics)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }

# Storage
redb = "4"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics / system introspection
prometheus = "0.14"
sysinfo = "0.39"
hdrhistogram = "7"

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"

# Time / ids / util
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
humantime-serde = "1"

# Benchmarking
criterion = { version = "0.8", features = ["async_tokio"] }
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
