[package]
name = "hpc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, configuration, error handling and telemetry for the HPC framework"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
tempfile = "3"
