[package]
name = "hpc-diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Multi-platform diagnostics: /proc parsing, platform-difference detection, JSON bug-analysis bundles"

[lib]
name = "hpc_diag"
path = "src/lib.rs"

[[bin]]
name = "hpc-diag"
path = "src/main.rs"

[dependencies]
hpc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
